brain/sources/prod-metadata/objects/Recurring_Break_Series__c/Recurring_Break_Series__c.object-meta.xml
<CustomObject>
    <description>One record per recurring break batch created via the Recruiter Break Scheduler flow. Owns a set of Event records via the Recurring_Break_Series__c lookup on Event.</description>
    <label>Recurring Break Series</label>
    <nameField>
        <displayFormat>RBS-{0000}</displayFormat>
        <label>Series Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recurring Break Series</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>