brain/sources/prod-metadata/objects/Recurring_Break_Series__c/fields/Event_Count__c.field-meta.xml
<CustomField>
    <fullName>Event_Count__c</fullName>
    <label>Event Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>