brain/sources/prod-metadata/objects/Recurring_Break_Series__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <label>Start Time</label>
    <length>20</length>
    <type>Text</type>
</CustomField>