brain/sources/prod-metadata/objects/Recurring_Break_Series__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>Subject</label>
    <length>80</length>
    <type>Text</type>
</CustomField>